# egm_dataset_generator

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
egm_dataset_generator/: cli.py  generate_dataset.py  label_transformers.py  raw_data_processor.py  selector.py
src/egm_dataset_generator/: generate_dataset.py  peaks_fixer.py  raw_data_processor.py  selector.py  tranformations.py  transforms.py
src/egm_dataset_generator/cli/: preprocessor.py  segmentator.py
