[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "egm_dataset_generator"
authors = [
    {name = "Anton Rybkin"},
    {name = "Ruslan Smirnov"},
]
description = "Set of tools to generate dataset from egm signals and labels of heartbeats"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]
notebook = [
    "notebook",
    "matplotlib",
]
dev = [
    "egm_dataset_generator[test,notebook]",
    "flake8",
    "mypy",
    "pre-commit",
    "types-tqdm",
]

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
egm_dataset_generator = ["py.typed"]

[project.scripts]
generate_dataset = "egm_dataset_generator.cli:main"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = '''(?x)^(
    .git/|
    .venv/|
    venv/|
  )$'''

[tool.black]
line-length = 89
extend-exclude = '''(?x)^(
    .git/|
    .venv/|
    venv/|
  )$'''
